--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,5 +17,7 @@
 
 <!-- For all browsers -->
 <link rel="stylesheet" href="{{ base_path }}/assets/css/main.css">
+<link rel="stylesheet" href="{{ '/assets/css/chirpy-academic.css' | relative_url }}">
+<link href="https://fonts.googleapis.com/css2?family=Clash+Grotesk:wght@200&display=swap" rel="stylesheet">
 
 <meta http-equiv="cleartype" content="on">
